Moved back to Groovy based Gradle files